<resources>
    <string name="app_name" translatable="false">UDCK</string>

    <string name="home_page_label">Home</string>

    <string name="login_with_email">Continue With Email</string>
    <string name="default_notification_channel_id" translatable="false">Default</string>
    <string name="text_notification_type_thongbao">Notification</string>
    <string name="string_error_signin">Error login</string>
    <string name="msg_token_fms" translatable="false" >%s</string>
    <string name="button_share_decs">Share</string>
    <string name="send_float_button_desc">Send notification</string>
    <string name="send_notification_error">This account does not have permission to send notices</string>
    <string name="send_notification_succes">Success</string>
    <string name="target_hint">Which class would you like to send?</string>
    <string name="thoikhoabieu_radiobutton">Academic Calendar</string>
    <string name="thong_bao_radiobutton">Notification</string>
    <string name="detail_hint">Address to view details</string>
    <string name="choose_target_page_label">Choose</string>
    <string name="udck_detail_label">Detail</string>
    <string name="notification_page_label">Notification</string>
    <string name="toolbar_title" translatable="false">UDCK</string>
    <string name="form_title">Form</string>
    <string name="detail_title">Detail</string>
    <string name="user_detail">User</string>
    <string name="logout_button">Logout</string>
    <string name="thoi_khoa_bieu_label">Academic Calendar</string>
    <string name="thong_bao_label">Notification</string>
    <string name="all_label" translatable="false">All</string>
    <string name="user_name" translatable="false">Email</string>
    <string name="password_hint" translatable="false">Password</string>
    <string name="re_password" translatable="false">Re Password</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_des" translatable="false">Chào mừng bạn đã đến với ứng dụng thông báo của UDCK</string>
    <string name="get_notification" translatable="false">Get Notification!</string>
    <string name="get_notification_des" translatable="false">Nhận thông báo từ nhà trường một cách nhanh nhất</string>
    <string name="subscribe" translatable="false">Subcribe!</string>
    <string name="get_sub_des" translatable="false">Chỉ nhận những thông tin nào mà bạn muốn bằng cách đăng kí</string>
    <string name="multi_language" translatable="false">Localization</string>
    <string name="get_localization_des" translatable="false">Bạn có thể tuỳ chỉnh ngôn ngữ của bạn</string>
    <string name="save_button">Save</string>
    <string name="khoa_ky_thuat_desc" translatable="false">Khoa kỹ thuật nông nghiệp</string>
    <string name="khoa_kinh_te_desc" translatable="false">Khoa kinh tế</string>
    <string name="khoa_su_pham_desc" translatable="false">Khoa sư phạm và dự bị đại học</string>
    <string name="button_send_message_decs" translatable="false">Send your message</string>
    <string name="publisher_hint">What your name?</string>
    <string name="content_hint">What content do you want to announce?</string>
    <string name="text_notification_type_thoikhoabieu">Academic Calendar</string>
    <string name="push_button">Send</string>
</resources>