<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_page"
        android:enabled="true"
        android:icon="@drawable/ic_home_page"
        android:title="@string/home_page_label"/>

    <item
        android:id="@+id/message_page"
        android:icon="@drawable/ic_message_page"
        android:enabled="true"
        android:title="@string/message_page_label"/>

    <item
        android:id="@+id/udck_detail_page"
        android:enabled="true"
        android:icon="@drawable/ic_udck_detail_page"
        android:title="@string/udck_detail_label"/>
    <item
        android:id="@+id/notification_page"
        android:icon="@drawable/ic_notification_page"
        android:enabled="true"
        android:title="@string/notification_page_label"/>
</menu>