<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/home_page"
    app:startDestination="@id/listNotification">
    <fragment
        android:id="@+id/listNotification"
        android:name="k12tt.luongvany.nghiencuukhoahoc.notificationview.NotificationListFragment"
        android:label="@string/home_page_label"
        tool:layout="@layout/fragment_notification_list">
        <action
            android:id="@+id/action_notification_recylceview_to_notification_detail"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right"
            app:destination="@id/notification_detail"/>

        <action
            android:id="@+id/action_notification_recylceview_to_push_notification_form"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right"
            app:destination="@id/formNotification"/>
        <action
            android:id="@+id/action_listNotification_to_userDetailFragment"
            app:destination="@id/userDetailFragment" />
    </fragment>


    <fragment
        android:id="@+id/formNotification"
        android:name="k12tt.luongvany.nghiencuukhoahoc.notificationview.NotificationFormFragment"
        android:label="@string/form_title"
        tool:layout="@layout/fragment_notification_form">
        <action
            android:id="@+id/action_formNotification_to_userDetailFragment"
            app:destination="@id/userDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/notification_detail"
        android:name="k12tt.luongvany.nghiencuukhoahoc.notificationview.NotificationDetailsFragment"
        android:label="@string/detail_title"
        tool:layout="@layout/fragment_notification_details">
    </fragment>

    <fragment
        android:id="@+id/signInFragment"
        android:name="k12tt.luongvany.nghiencuukhoahoc.auth.SignInFragment"
        android:label="@string/app_name"
        tool:layout="@layout/main_login">

        <action
            android:id="@+id/action_signInFragment_to_loginWithAccountFragment2"
            app:destination="@id/loginWithAccountFragment" />
    </fragment>


    <fragment
        android:id="@+id/userDetailFragment"
        android:name="k12tt.luongvany.nghiencuukhoahoc.UserProfile"
        android:label="@string/user_detail"
        tool:layout="@layout/user_detail" />

    <fragment
        android:id="@+id/loginWithAccountFragment"
        android:name="k12tt.luongvany.nghiencuukhoahoc.auth.SignInWithAccount"
        tool:layout="@layout/login_fragment" />
</navigation>