<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="k12tt.luongvany.presentation.ViewState" />
        <import type="k12tt.luongvany.presentation.binding.NotificationTypeBinding" />

        <variable
            name="viewModel"
            type="k12tt.luongvany.presentation.NotificationFormViewModel" />

        <variable
            name="presenter"
            type="k12tt.luongvany.nghiencuukhoahoc.notificationview.NotificationFormFragment" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

<!--        <ImageButton-->
<!--            android:id="@+id/imgCoverPhoto"-->
<!--            android:layout_width="144dp"-->
<!--            android:layout_height="144dp"-->
<!--            android:layout_marginBottom="16dp"-->
<!--            android:background="@android:color/darker_gray"-->
<!--            android:onClick="@{presenter::clickTakePhoto}"-->
<!--            android:scaleType="centerInside"-->
<!--            app:imageUrl="@{viewModel.notification().image}" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:hint="@string/publisher_hint"
                android:text="@={viewModel.notification().publisher}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:hint="@string/target_hint"
                android:text="@={viewModel.notification().target}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/content_hint"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:text="@={viewModel.notification().content}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:hint="@string/detail_hint"
                android:text="@={viewModel.notification().url}" />
        </com.google.android.material.textfield.TextInputLayout>

<!--        <androidx.appcompat.widget.AppCompatSpinner-->
<!--            android:id="@+id/spnPublisher"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:entries="@{viewModel.publishers}"-->
<!--            android:onItemSelected="@{(p, v, pos, id) -> viewModel.notification.setPublisher(viewModel.publishers[pos])}"-->
<!--            android:selection="@{viewModel.publishers.indexOf(viewModel.notification.publisher)}"-->
<!--            android:spinnerMode="dialog" />-->

        <RadioGroup
            android:id="@+id/rgMediaType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbMediaPaper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.notification().notificationType == NotificationTypeBinding.THOIKHOABIEU}"
                android:onCheckedChanged="@{(button, isChecked) -> viewModel.onMediaTypeChanged(NotificationTypeBinding.THOIKHOABIEU, isChecked)}"
                android:text="@string/thoikhoabieu_radiobutton" />

            <RadioButton
                android:id="@+id/rbMediaEbook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.notification().notificationType == NotificationTypeBinding.THONGBAO}"
                android:onCheckedChanged="@{(button, isChecked) -> viewModel.onMediaTypeChanged(NotificationTypeBinding.THOIKHOABIEU, isChecked)}"
                android:text="@string/thong_bao_radiobutton" />
        </RadioGroup>



        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.saveNotification()}"
            android:text="@string/push_button"
            app:isVisible="@{viewModel.state().status != ViewState.Status.LOADING}" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleSmall"
            isVisible="@{viewModel.state().status == ViewState.Status.LOADING}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</layout>